ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transaction-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: transaction.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transaction-frontend-service
            port:
              number: 3001
